# asteria-command-station

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
asteria/: .gitignore  ASTERIA_AGENT.md  PLAN.md  README.md  __init__.py  build_gui.ps1  cli.py  openclaw_bridge.py  start_asteria.ps1  stop_asteria.ps1  use_asteria_env.ps1
asteria/daemon/: __init__.py  common.py  models.py  runtime.py  server.py
asteria/docs/: OPENCLAW_DIRECT_BRIDGE.md  OPENCLAW_SETUP.md  OPERATOR_RUNBOOK.md  STACK_OVERVIEW.md
asteria/gui/: app.js  index.html  styles.css
asteria/gui-app/: index.html  package-lock.json  package.json  vite.config.ts
asteria/mobile/: __init__.py  auth.py  bridge.py  fastapi_routes.py  mock_runtime.py  preview.py  runtime_adapter.py  session_store.py  types.py
asteria/tools/: __init__.py  fsm.py
docs/: ARCHITECTURE.md  EXTERNAL_REPOS.md  QUICKSTART.md
scripts/: asteria_mobile_setup.py
wiki/: index.md  log.md  open-questions.md  schema.md
wiki/.obsidian/: appearance.json  graph.json  workspace.json
wiki/fsm/: example-fsms.md  fsm-authoring-patterns.md  fsm-lifecycle.md
wiki/overview/: command-surface.md  control-and-leases.md  desk-prompt-bridge.md  mobile-and-handheld.md  runtime-modes.md  stack-map.md
wiki/procedures/: live-probe-checklist.md  recovery-playbooks.md
wiki/robot/: capability-matrix.md  safety-and-stop-semantics.md
wiki/sources/: asteria-agent.md  asteria-readme.md  cli-surface.md  fsm-tooling.md  gui-app-surface.md  llm-wiki-pattern.md  mobile-runtime-surface.md  (+7 more)
(+87 files in other folders)
